<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_welcome"
        android:contentDescription="@string/content_desc"/>


    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_welcome"
        android:textSize="32sp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/desc_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/desc_welcome"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_thin"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_getStarted"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/get_started"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/bg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_welcome" />


</androidx.constraintlayout.widget.ConstraintLayout>