<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.scan.ScanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_back"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textSize="24sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_scan"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/content_desc_img_scan"
            android:src="@drawable/img_sample_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_scan" />

        <TextView
            android:id="@+id/text_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/text_scan"
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_scan" />

        <LinearLayout
            android:id="@+id/layout_two_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_scan">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_gallery"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_btn"
                android:drawableTop="@drawable/ic_gallery_24"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/btn_gallery"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_camera"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_btn"
                android:drawableTop="@drawable/ic_camera_24"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/btn_camera"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_scan"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn"
            android:text="@string/btn_scan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_two_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>