<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.result.ResultActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_back"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_result"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/img_sample_result"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_result"
        android:contentDescription="@string/content_desc_img_result"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_result"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardBackgroundColor="@color/card_color"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_result" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_result"
                app:layout_constraintTop_toBottomOf="@+id/bookmark" />

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_type"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="64dp"
                app:layout_constraintStart_toEndOf="@+id/text_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmark" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_upload_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_upload_again"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="false"
                android:background="@drawable/bg_btn"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@id/btn_view_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_type" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_view_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_detail"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/bg_btn"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_upload_again"
                app:layout_constraintTop_toBottomOf="@id/text_result" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>